Update game over

--- a/Jogo do Mario/public/index.html
+++ b/Jogo do Mario/public/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <div class="game-board">
-        <div class="score">Score <b>00</b></div>
         <img src="aseets/imgs/mario.gif" class="mario">
         <img src="aseets/imgs/pipe.png" class="pipe">
         <img src="aseets/imgs/clouds.png" class="clouds">
+        <div id="game_over"></div>
     </div>
 </body>
 </html> 
