Início do curso de Java - Hello World

--- a/Jogo do Mario/public/index.html
+++ b/Jogo do Mario/public/index.html
@@ -11,6 +11,7 @@
         <img src="aseets/imgs/mario.gif" class="mario">
         <img src="aseets/imgs/pipe.png" class="pipe">
         <img src="aseets/imgs/clouds.png" class="clouds">
+        <img src="aseets/imgs/clouds.png" class="clouds2">
         <div id="game_over"></div>
     </div>
 </body>
